--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -9,14 +9,12 @@
 
   padding: 12px 20px;
   padding-left: 42px;
-  width: 300px;
+  width: 400px;
 
   font-size: 16px;
-  transition: all 0.15s ease-in-out;
 
   &:focus {
     border: 2px solid rgba(0, 0, 0, 0.1);
-    width: 450px;
   }
 }
 
@@ -29,4 +27,18 @@
   position: absolute;
   top: 12px;
   left: 14px;
+}
+
+.clearIcon {
+  width: 25px;
+  height: 25px;
+  opacity: 0.3;
+  position: absolute;
+  top: 12px;
+  right: 12px;
+  cursor: pointer;
+
+  &:hover {
+    opacity: 0.8;
+  }
 }
